restructured the project

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d6c0782b",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,6 @@
     "import sys\n",
     "import os\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "65cd5e56",
    "metadata": {},
    "outputs": [
@@ -313,8 +312,12 @@
     }
    ],
    "source": [
-    "plt.hist(df['consumption_pct'], bins=100); plt.title(\"consumption_pct dist\")\n",
-    "plt.figure(); plt.hist(df['battery_pct'], bins=100); plt.title(\"battery_pct dist\")"
+    "plt.hist(df['consumption_pct'], bins=100)\n",
+    "plt.title(\"consumption_pct dist\")\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.hist(df['battery_pct'], bins=100)\n",
+    "plt.title(\"battery_pct dist\")"
    ]
   },
   {
