--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -5,28 +5,12 @@
    "execution_count": null,
    "id": "d6c0782b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/joel/Documents/battery_predictor\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
     "import pandas as pd\n",
+    "from battery_predictor.features.featurize import FeatureEngineer # type: ignore\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "root_path = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "if root_path not in sys.path:\n",
-    "    sys.path.append(root_path)\n",
-    "\n",
-    "print(root_path)\n",
-    "from src.features.featurize import FeatureEngineer"
+    "%matplotlib inline"
    ]
   },
   {
