--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "83ac12b6",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,8 @@
    ],
    "source": [
     "df_feats['target_minutes'].dropna().describe()\n",
-    "plt.hist(df_feats['target_minutes'].dropna(), bins=100); plt.title(\"time to 10%\")"
+    "plt.hist(df_feats['target_minutes'].dropna(), bins=100)\n",
+    "plt.title(\"time to 10%\")"
    ]
   },
   {
