Apply black formatting

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -8,8 +8,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from battery_predictor.features.featurize import FeatureEngineer # type: ignore\n",
+    "from battery_predictor.features.featurize import FeatureEngineer  # type: ignore\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -159,7 +160,7 @@
    ],
    "source": [
     "df = pd.read_parquet(\"../data/sample_events.parquet\")\n",
-    "df['ts'] = pd.to_datetime(df['ts'])\n",
+    "df[\"ts\"] = pd.to_datetime(df[\"ts\"])\n",
     "df.head()"
    ]
   },
@@ -190,7 +191,7 @@
    ],
    "source": [
     "# Samples per user\n",
-    "df.groupby('user_id').size().describe()"
+    "df.groupby(\"user_id\").size().describe()"
    ]
   },
   {
@@ -221,9 +222,9 @@
     }
    ],
    "source": [
-    "uid = df['user_id'].unique()[5]\n",
-    "sub = df[df['user_id']==uid].set_index('ts')\n",
-    "sub['battery_pct'].plot(title=f\"user {uid} battery over time\")"
+    "uid = df[\"user_id\"].unique()[5]\n",
+    "sub = df[df[\"user_id\"] == uid].set_index(\"ts\")\n",
+    "sub[\"battery_pct\"].plot(title=f\"user {uid} battery over time\")"
    ]
   },
   {
@@ -255,7 +256,9 @@
     }
    ],
    "source": [
-    "sub[['battery_pct','hr','steps','usage_minutes']].rolling(5).mean().plot(subplots=True, figsize=(10,6))"
+    "sub[[\"battery_pct\", \"hr\", \"steps\", \"usage_minutes\"]].rolling(5).mean().plot(\n",
+    "    subplots=True, figsize=(10, 6)\n",
+    ")"
    ]
   },
   {
@@ -296,11 +299,11 @@
     }
    ],
    "source": [
-    "plt.hist(df['consumption_pct'], bins=100)\n",
+    "plt.hist(df[\"consumption_pct\"], bins=100)\n",
     "plt.title(\"consumption_pct dist\")\n",
     "\n",
     "plt.figure()\n",
-    "plt.hist(df['battery_pct'], bins=100)\n",
+    "plt.hist(df[\"battery_pct\"], bins=100)\n",
     "plt.title(\"battery_pct dist\")"
    ]
   },
@@ -740,8 +743,8 @@
     }
    ],
    "source": [
-    "df_feats['target_minutes'].dropna().describe()\n",
-    "plt.hist(df_feats['target_minutes'].dropna(), bins=100)\n",
+    "df_feats[\"target_minutes\"].dropna().describe()\n",
+    "plt.hist(df_feats[\"target_minutes\"].dropna(), bins=100)\n",
     "plt.title(\"time to 10%\")"
    ]
   },
@@ -960,7 +963,7 @@
    ],
    "source": [
     "# take rows with non-null target\n",
-    "df_feats[df_feats['target_minutes'].notna()].sample(5).head()"
+    "df_feats[df_feats[\"target_minutes\"].notna()].sample(5).head()"
    ]
   },
   {
