--- a/notebooks/experiments.ipynb
+++ b/notebooks/experiments.ipynb
@@ -19,14 +19,18 @@
    "outputs": [],
    "source": [
     "model = joblib.load(\"../models/battery_model.pkl\")\n",
-    "sample = pd.DataFrame([{\n",
-    "    \"last_battery\": 65, \n",
-    "    \"mean_battery\": 35,\n",
-    "    \"min_battery\": 11,\n",
-    "    \"max_battery\": 80,\n",
-    "    \"count_events\": 232,\n",
-    "    \"std_battery\": 123\n",
-    "}])\n",
+    "sample = pd.DataFrame(\n",
+    "    [\n",
+    "        {\n",
+    "            \"last_battery\": 65,\n",
+    "            \"mean_battery\": 35,\n",
+    "            \"min_battery\": 11,\n",
+    "            \"max_battery\": 80,\n",
+    "            \"count_events\": 232,\n",
+    "            \"std_battery\": 123,\n",
+    "        }\n",
+    "    ]\n",
+    ")\n",
     "pred = model.predict(sample)"
    ]
   },
